# HackaTum-Check24

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/database/: DataBase.cpp  DataBase.h
src/io/: Endpoints.h  endpoints.h
